2004-07-20  Per Bothner  <per@bothner.com>

	* CodeFragment.java:  Remove useless import statements.
	* IfState.java:  Likewise.
	* Label.java:  Likewise.
	* Location.java:  Likewise.
	* PrimType.java:  Likewise.
	* Scope.java:  Likewise.
	* TryState.java:  Likewise.
	* Type.java:  Likewise.
	* Variable.java:  Likewise.
	* ZipArchive.java:  Likewise.
	* dump.java:  Likewise.

2004-05-13  Per Bothner  <per@bothner.com>

	* ClassType.java (getFields, getDeclaredMethods):  Make synchronized.
	(getDeclaredField):  Use getFields.
	(getDeclaredMethod [2 overloads]):  Use getDeclaredMethods.
	Fixes Savannah bug #8817.

2004-02-20  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitTryEnd):  Don't emitStore if ! reachableHere().
	Fixes bug reported by dominique.boucher@nuecho.com 2/20.

2004-02-19  Daniel Bonniot  <Daniel.Bonniot@inria.fr>

	* ClassType.java (getPackageName):  Use lastIndexOf, not indexOf.

2004-02-10  Per Bothner  <per@bothner.com>

	* ClassType.java (isAccessible):  New method.

2003-11-03  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitIfIntEqZero):  New method.

2003-10-28  Per Bothner  <per@bothner.com>

	* dump-main.cc:  Belatedly remove unused file.

2003-10-09  Per Bothner  <per@bothner.com>

	* ZipArchive.java:  Remove all fields and non-static methods,
	leaving only main and usage/copy, which main uses.
	There is no point any more, given the existence of java.util.zip.
	(main):  Implement 'q' command using ZipOutputStream and ZipEntry.
	* ZipMember.java:  Remove file.  No longer used.
	* Makefile.am:  Update accordingly.

2003-09-30  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitWithCleanupStart, emitWithCleanupCatch,
	emitWithCleanupDone):  New methods.

2003-09-24  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitTryStart):  Clean up internal logic.  Fix bug
	where testing for non-zero SP would never true at that point.

2003-07-16  Chris Dean  <Chris.Dean@sokitomi.com>
